feat: rebalance kits and harden matches